# CodeSamples

./: .gitignore  .pydevproject  README.md
UnitTest/boostTest/src/: CMakeLists.txt  UTDriver.cpp  boostTest.cpp  testhello.cpp  testhello2.cpp  testmock.cpp
buildsystem/cmake/step1/: CMakeLists.txt
buildsystem/cmake/usestudentlib2/: CMakeLists.txt
buildsystem/gcc/: hello.cpp
buildsystem/gnumake/: Main.cpp  Test1.cpp  Test1.h  Test2.cpp  makefile
carla/: test_client.py
ceres_test/: CMakeLists.txt
ceres_test/src/: ba.cpp  curve_fitting.cpp  curve_fitting2.cpp  main.cpp  powel_test.cpp
cplusplus/eigen_vectorxd/: CMakeLists.txt
cplusplus/gsstreamer_test/: CMakeLists.txt
cplusplus/indent/: CMakeLists.txt
cplusplus/json/: CMakeLists.txt
cplusplus/json/src/: main.cpp
cplusplus/log4cplusutility/: CMakeLists.txt
cplusplus/rvalue/: CMakeLists.txt
cplusplus/spline/: CMakeLists.txt
cplusplus/threading/: CMakeLists.txt
cplusplus/vector_smartpointer/: CMakeLists.txt
cplusplus/vtable/: CMakeLists.txt
design/statemachine/: CMakeLists.txt
docker/: Dockerfile  prompt.txt  ros_entrypoint.sh
docker/training/: Dockerfile  requirements_fs.txt  requirements_v2.txt
docker/training_troch26/: Dockerfile  requirements_v2.txt
docker/ubuntu1804/: Dockerfile
docker/ubuntu2004/: Dockerfile
goodresource/: deeplearning.txt  didi.txt  machine_learning.txt  nanodegree.txt  questions_mlgraduation.txt  tensorflow.txt
imageprocessing/: myimagedatagenerator.py  resizetest.py  rotate_img.py
imageprocessing/apiltag/: aruco_test.py  extact_apil.py
imageprocessing/contours/: test_contour.py
imageprocessing/houghline/: canny.py
imageprocessing/morphological/: Morphological_transformations.py  extract_horizatal_line.py
imageprocessing/opencvsample/intro/: CMakeLists.txt  mat_vec.cpp  seg_class.cpp  seg_node.cpp
imageprocessing/opencvsample/loaddisplay/: CMakeLists.txt
imageprocessing/pcl/: CMakeLists.txt
imageprocessing/pcl/src/: icp_test.cpp  pcd_write.cpp  voxel_grid_filter.cpp
imageprocessing/pcl_test/: CMakeLists.txt
imageprocessing/text_extraction/: gradient_based.py
imageprocessing/thresholding/: thresholding.py
imageprocessing/trackbar/: trackbar.py
imageprocessing/tracking/: optical_flow_test.py
lcm/: CMakeLists.txt
lcm/src/: HEADER.lcm  Imu.lcm  enginetargetlanes_pb2.py  entity_pb2.py  example_t.lcm  geometry_pb2.py  header_pb2.py  main.cpp  parse_vslamlog.py  point2d_list_t.lcm  pose_pb2.py  reserved_pb2.py  sendlcm.cpp  test_lcm.py  test_lcmlog.py  test_recv.py  test_recv_proto.py
linux/fork/: error.txt  exec.cpp  main  myoutput  output
linux/shellscripts/: guarding_test.sh
protobuf/: addressbook_pb2.py  addressbook_pb2.py_backup  readprobuf.py  test_probuf.py
python/: calfailureCategory.py  readbytes.py
python/Installation_logs_analysis/: calfailureCategory.py  rebootVisualize.py  rebootstatistics.py
python/Programming_Foundation_With_Python/: addattr.py  basics.py  countwords.py  test.py  testdebug.py
python/ctype/: CMakeLists.txt  foo.cpp  fooWrapper.py
python/images/: cannyedgetest.py  dbscan.py  findpeak.py  opencvbasic.py  orbtest.py  registrationtest.py  sift_test.py  sifttest.py
python/json/: test_json.py
python/keepalivesocket/: clientside.py  serverside.py
python/load_statistics/: analyzeloadinfo.py  colLoad.sh  visualizeLoadInfo.py
python/mapcanvas/: del_item_test.py  draw_graphics_matplot.py  matplot_tkinter.py  matplot_tkinter2.py
python/matplottest/: click_disp.py  scatter.py
python/nerf/: tyro_test.py
python/numpy/: lessbasic.py  onehotlabelo.py  scaletest.py  stdtest.py
python/open3d_test/: draw_polygon.py  poseinfo.py  test_open3dml.py  testcolormap.py
python/pandas/: applytest.py
python/plane_fitting/: pca_test.py  plane_fitting.py  plot_surface.py
python/pythonbasics/: arrayinext.py  controlflow.py  data.txt  data_types.py  dataframetodic.py  dequetest.py  dict_comprehenstion.py  draw_lines.py  dumpobject.py  dumpyobject.py  enumname.py  erodeboarder.py  formattest.py  funcparameters.py  functionproperty.py  functiontest.py  generatortest.py  kfoldtest.py  list.py  listcomprehension.py  logging_test.py  myfile.pickle  npconvolve.py  numericalstability.py  numpy_tutorial.py  onehotencodertest.py  pandas_groupby.py  pandastutorial.py  passkeyparameters.py  polyfitting.py  pyplot_test.py  pythonlist.py  randomtest.py  softmax.py  table_test.py  testPickle.py  testconcatenate.py  testlimit.py  testpickle.py  teststring.py
python/pytorch3dtest/: bundle_adjustment.py  camera_position_optimization_with_differentiable_rendering.py  deform_source_mesh_to_target_mesh.py  fit_textured_mesh.py  render_textured_meshes.py  vis_scene_image.py
python/scanner_timeslicing_analysis/: extractData.py  main.py  visualizedata.py
python/shapely/: test_shared_path.py
python/sklearn/: enumtest.py  kerastest.py  normalizationtest.py  onehotencodertest.py  test_clustering.py  theanotest.py
python/slim/: layers_test.py  streaming_mean_test.py  variables_test.py
python/sparse_matrix/: test_scipy.py  voxel_grid_test.py
python/sympy_test/: test.py  test_diff.py
python/tensorflow/: image_rotation.py  restoretest.py  savetest.py  session.py  stacktest.py  tfpaddingtest.py  tfrecordtest.py  using_gpus.py  variable_1.py  variables.py
python/torch_test/: auto_grad.py  autograd_test.py  backprop_test.py  dataset_test.py  hello.py  hello_test.py  lightning_test.py  network_test.py  object_dect_test.py  tensorboard_test.py  test_tb.py  test_tensors.py  torch_turorial2.py  transform_test.py  what_nn.py
python/utility/: LogParsing.py
python/visualizeStateMachine/: ParseDeviceTraces.py  buildsatemachine.py  output.xml  parseDECTraces.py  parsestatemachine.py
ruby/: accessortest.rb  argumentparsing.rb  hashtest.rb  test.rb
ruby/beginning/: Trig.rb  blocks.rb  classes.rb  hello2.rb  hello3.rb  hello4.rb  helloworld.rb  loop.rb  (+7 more)
unittest/boosttest/src/: CMakeLists.txt  testmock.cpp
unittest/googletest/src/: CMakeLists.txt  testfixture.cpp
utility/: duration.py  poseinfo.py
valgrind/: hello.cpp
(+76 files in other folders)
